--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -50,7 +50,7 @@
 
 						<div class="form-group mb-3">
 							{{ form_label(registrationForm.address, null, {'label_attr': {'class': 'form-label'}}) }}
-							{{ form_widget(registrationForm.address, {'attr': {'class': 'form-control', 'placeholder': 'Entrez votre adresse postale'}}) }}
+							{{ form_widget(registrationForm.address, {'attr': {'class': 'form-control', 'placeholder': 'Adresse complète (23 rue de la Paix, 75000 Paris)'}}) }}
 							{{ form_errors(registrationForm.address) }}
 						</div>
 
