--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -110,6 +110,7 @@ td {
 	vertical-align: middle;
 	background-color: white; /* Fond blanc pour un contraste clair */
 	min-width: 180px;
+	max-width: 180px;
 }
 
 /* Arrondir uniquement les coins du tableau */
@@ -316,8 +317,9 @@ p.reserve, a.reserve {
 
 p.update {
 	color: black !important;
+	margin: 0 auto;
+	margin-top: 10px;
 	margin-bottom: 10px;
-	margin-right: 20px;
 	font-weight: 600 !important;
 	font-size: 16px !important;
 }
