--- a/templates/subscription/new.html.twig
+++ b/templates/subscription/new.html.twig
@@ -1,37 +1,41 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container">
-        <h1>Sélectionner votre forfait</h1>
+	<div class="container">
+		<div class="card shadow-sm">
+			<h1>Sélectionner votre forfait</h1>
+			<div class="card-body">
 
-        {{ form_start(form) }}
-        
-        <div class="form-group">
-            {{ form_label(form.type, null, {'label_attr': {'class': 'form-label'}}) }}
-            {{ form_widget(form.type, {'attr': {'class': 'form-control'}}) }}
-        </div>
+				{{ form_start(form) }}
 
-        {% if form.plan is defined %}
-            <div class="form-group">
-                {{ form_label(form.plan, null, {'label_attr': {'class': 'form-label'}}) }}
-                {{ form_widget(form.plan, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        {% endif %}
+				<div class="form-group">
+					{{ form_label(form.type, null, {'label_attr': {'class': 'form-label'}}) }}
+					{{ form_widget(form.type, {'attr': {'class': 'form-control'}}) }}
+				</div>
 
-        <div class="form-group">
-            {{ form_label(form.promoCode, null, {'label_attr': {'class': 'form-label'}}) }}
-            {{ form_widget(form.promoCode, {'attr': {'class': 'form-control'}}) }}
-        </div>
+				{% if form.plan is defined %}
+					<div class="form-group">
+						{{ form_label(form.plan, null, {'label_attr': {'class': 'form-label'}}) }}
+						{{ form_widget(form.plan, {'attr': {'class': 'form-control'}}) }}
+					</div>
+				{% endif %}
 
-        {{ form_rest(form) }}
+				<div class="form-group">
+					{{ form_label(form.promoCode, null, {'label_attr': {'class': 'form-label'}}) }}
+					{{ form_widget(form.promoCode, {'attr': {'class': 'form-control'}}) }}
+				</div>
 
-        <button type="submit" class="btn btn-primary mt-2">Réserver et payer</button>
-        {{ form_end(form) }}
-        
-        {% if is_granted('ROLE_ADMIN') %}
-            <div class="mt-3">
-                <a href="{{ path('plan_new') }}" class="btn btn-secondary">Ajouter un nouveau forfait</a>
-            </div>
-        {% endif %}
-    </div>
+				{{ form_rest(form) }}
+
+				<button type="submit" class="btn btn-primary mt-2">Réserver et payer</button>
+				{{ form_end(form) }}
+
+				{% if is_granted('ROLE_ADMIN') %}
+					<div class="mt-3">
+						<a href="{{ path('plan_new') }}" class="btn btn-secondary">Ajouter un nouveau forfait</a>
+					</div>
+				{% endif %}
+			</div>
+		</div>
+	</div>
 {% endblock %}
