--- a/templates/booking/manage.html.twig
+++ b/templates/booking/manage.html.twig
@@ -4,8 +4,8 @@
 <div class="container">
 	<h1>Gérer mes réservations</h1>
 	{% if bookings is empty %}
-		<p>Aucune réservation en cours.</p>
-		<a href="{{ path('calendar') }}" class="btn btn-primary btn-sm">Réserver</a>
+	<p>Aucune réservation en cours.</p>
+		<a href="{{ path('calendar') }}" class="btn btn-general btn-sm">Réserver</a>
 	{% else %}
 		<form method="post" action="{{ path('booking_cancel_multiple') }}">
 			<table class="table table-bordered">
@@ -40,5 +40,5 @@
 		{% endfor %}
 	</tbody>
 </table>
-<button type="submit" class="btn btn-danger btn-sm">Annuler les réservations sélectionnées</button>
-<a class="btn btn-primary btn-sm" href="{{ path('calendar') }}" role="button">Réserver</a></form>{% endif %}</div>{% endblock %}
+<button type="submit" class="btn complet btn-sm">Annuler les réservations sélectionnées</button>
+<a class="btn btn-general btn-sm" href="{{ path('calendar') }}" role="button">Réserver</a></form>{% endif %}</div>{% endblock %}
