--- a/templates/planning/edit.html.twig
+++ b/templates/planning/edit.html.twig
@@ -32,10 +32,10 @@
 						{{ form_widget(form.instructor, {'attr': {'class': 'form-control'}}) }}
 					</div>
 
-					<button type="submit" class="btn btn-primary">Enregistrer</button>
+					<button type="submit" class="btn btn-general mt-2">Enregistrer</button>
 					{{ form_end(form) }}
 
-					<a href="{{ path('planning') }}" class="btn btn-secondary mt-3">Annuler</a>
+					<a href="{{ path('planning') }}" class="btn complet mt-2">Annuler</a>
 				</div>
 			</div>
 		</div>
