--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -8,7 +8,7 @@
 		<h1>Planning</h1>
 
 		{% if is_granted('ROLE_ADMIN') %}
-			<a href="{{ path('planning_edit') }}" class="btn btn-primary mb-3">Ajouter une session</a>
+			<a href="{{ path('planning_edit') }}" class="btn btn-general mb-3">Ajouter une session</a>
 		{% endif %}
 
 		<div class="row">
