--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -50,7 +50,7 @@
                         {{ form_errors(form.message) }}
                     </div>
 					<div class="d-flex justify-content-end mt-4">
-						<button type="submit" class="btn btn-primary">Envoyer</button>
+						<button type="submit" class="btn btn-general">Envoyer</button>
 					</div>
                     {{ form_end(form) }}
                 </div>
