--- a/templates/course/new.html.twig
+++ b/templates/course/new.html.twig
@@ -45,7 +45,7 @@
 					<div class="mb-3">
 						<div class="form-check form-switch">
 							{{ form_widget(form.isRecurrent, {'attr': {'class': 'form-check-input'}}) }}
-							{{ form_label(form.isRecurrent, 'Ce cours est-il récurrent ?', {'label_attr': {'class': 'form-check-label'}}) }}
+							{{ form_label(form.isRecurrent, 'Cours récurrent', {'label_attr': {'class': 'form-check-label'}}) }}
 							{{ form_errors(form.isRecurrent) }}
 						</div>
 					</div>
@@ -57,7 +57,7 @@
 					</div>
 
 					<div class="d-flex justify-content-end mt-4">
-						<button type="submit" class="btn btn-primary">Enregistrer</button>
+						<button type="submit" class="btn btn-general">Enregistrer</button>
 					</div>
 					{{ form_end(form) }}
 				</div>
