--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="{{ asset('styles/style.css') }}"> {% block stylesheets %}{% endblock %}
 		</head>
 		<body>
-			<div class="d-flex flex-column min-vh-100">
+			<div class="global d-flex flex-column">
 				<nav class="navbar navbar-expand-md navbar-light bg-white">
 					<div class="container-fluid">
 						<a class="navbar-brand" href="/">
