--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Contact{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="col-md-12 w-50 mx-auto mt-5">
+    <div class="container contact">
+        <div class="col col-12 w-50 mx-auto mt-2">
             <div class="card">
                 <div class="card-body">
                     <h1>Contactez-nous</h1>
