--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -12,7 +12,7 @@
 		{% endif %}
 
 		<div class="row">
-			<div class="col col-9">
+			<div class="col col-9 content-scrollable">
 				<table class="table table-bordered">
 					<thead>
 						<tr>
@@ -93,7 +93,7 @@
 				</table>
 			</div>
 
-			<div class="col col-3">
+			<div class="col col-3 content-scrollable">
 				<table class="table table-bordered">
 					<thead>
 						<tr>
